--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.hasyolu.readcampus">
 
     <dist:module dist:instant="true" />
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
@@ -16,27 +17,38 @@
     <application
         android:name="com.hasyolu.readcampus.App"
         android:allowBackup="true"
-        android:label="@string/app_name"
         android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:networkSecurityConfig="@xml/network_security_config"
-        android:theme="@style/AppTheme"
-        android:requestLegacyExternalStorage="true">
+        android:theme="@style/AppTheme">
+        <activity
+            android:name="com.hasyolu.readcampus.ui.login.LoginActivity"
+            android:exported="false" />
+
         <provider
             android:name="com.hasyolu.readcampus.base.ContextProvider"
             android:authorities="${applicationId}.contextprovider"
             android:exported="false" />
-        <activity android:name="com.hasyolu.readcampus.ui.main.MainActivity"/>
-        <activity android:name="com.hasyolu.readcampus.ui.novelRead.NovelReadActivity"/>
+
+        <activity android:name="com.hasyolu.readcampus.ui.main.MainActivity" />
+        <activity android:name="com.hasyolu.readcampus.ui.novelRead.NovelReadActivity" />
         <activity
             android:name="com.hasyolu.readcampus.ui.StartActivity"
             android:theme="@style/startTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <provider
+            android:name="cn.bmob.v3.util.BmobContentProvider"
+            android:authorities=".BmobContentProvider">
+        </provider>
+
     </application>
 
 </manifest>
